
portage-bashrc-mv-22.2
----------------------
- Update more flags supported by GNU/NON_GNU. Thanks to blackteahamburger. See
  https://github.com/vaeth/portage-bashrc-mv/pull/38

portage-bashrc-mv-22.1
----------------------
- Update some flags supported by GNU/NON_GNU. Thanks to Seryoga Leshii. See
  https://github.com/vaeth/portage-bashrc-mv/issues/37

portage-bashrc-mv-22.0
----------------------
- Add support for RUSTFLAGS, particularly quote -C to subsequent parameter, see
  https://github.com/vaeth/portage-bashrc-mv/issues/33
- Document rules for implicit quoting to subsequent parameter
- Do not implicitly quote for other VAR to subsequent parameter except
  CFLAGS, CXXFLAGS, LDFLAGS
- Do not filter some flags supported by current clang, see
  https://github.com/vaeth/portage-bashrc-mv/issues/34

portage-bashrc-mv-21.1
----------------------
- Enlarge the explicit list; thanks to Steven Newbury
  https://github.com/sjnewbury for the contribution.

portage-bashrc-mv-21.0
----------------------
- Attempt to handle arguments with parameters using an explicit list, see
  https://github.com/vaeth/portage-bashrc-mv/issues/10

portage-bashrc-mv-20.7
----------------------
- Filter -flto-odr-type-merging with USE_NONGNU=1

portage-bashrc-mv-20.6
----------------------
- Alessandro-Barbieri: Filter warnings not available in clang

portage-bashrc-mv-20.5
----------------------
- Jannik2099: filter LTO-requiring flags if LTO is not enabled on clang
- jiblime: Set USE_NONGNU=1 by default with active USE flag clang

portage-bashrc-mv-20.4
----------------------
- enable -fstack-clash-protection on clang

portage-bashrc-mv-20.3
----------------------
- Even more non-GNU

portage-bashrc-mv-20.2
----------------------
- More non-GNU

portage-bashrc-mv-20.1
----------------------
- SPDX-License-Identifier

portage-bashrc-mv-20.0
----------------------
- Backward-incompatible change:
  /-foo/-bar will not add -bar if -foo cannot be found.